Fixed set/add buttons; fix week bar getting fubar

--- a/imafru.html
+++ b/imafru.html
@@ -53,8 +53,8 @@
 	<div class="amount {{display}} {{performance}}" style="height: {{height}}px;">{{amount}}</div>
 	<form class="update dontdisplay">
 		<input class="earning" min=0 value=0>
-		<input class="add" type="button" value="set">
-		<input class="set" type="button" value="add">
+		<input class="add" type="button" value="add">
+		<input class="set" type="button" value="set">
 	</form>
 </div>
 </template>
@@ -65,8 +65,8 @@
 	<div class="amount {{display}}" style="height: {{height}}px;">{{amount}}</div>
 	<form class="update">
 		<input class="earning" min=0 value=0>
-		<input class="add" type="button" value="set">
-		<input class="set" type="button" value="add">
+		<input class="add" type="button" value="add">
+		<input class="set" type="button" value="set">
 	</form>
 </div>
 </template>
