--- a/imafru.html
+++ b/imafru.html
@@ -50,7 +50,7 @@
 <div class="day {{offday}}">
 	<img class="editlock" src="/img/lock-locked.svg" alt="open day to adjust earnings">
 	<div class="weekday" style="height: {{height "anti"}}px;">{{weekday}}</div>
-	<div class="amount {{display}} {{performance}}" style="height: {{height}}px;">{{amount}}</div>
+	<div class="amount {{display}} {{performance}}" style="height: {{height ""}}px;">{{amount}}</div>
 	<form class="update dontdisplay">
 		<input class="earning" min=0 value=0>
 		<input class="add" type="button" value="add">
@@ -73,7 +73,7 @@
 
 <template name="futureDay">
 <div class="day {{offday}}">
-	<div class="weekday" style="height: {{height "anti"}}px;">{{weekday}}</div>
-	<div class="amount {{display}} {{difficulty}} future" style="height: {{height}}px;">{{needed}}</div>
+	<div class="weekday" style="height: {{height "anti" "future"}}px;">{{weekday}}</div>
+	<div class="amount {{display}} {{difficulty}} future" style="height: {{height "" "future"}}px;">{{needed}}</div>
 </div>
 </template>
