interface adjustments+animations

--- a/imafru.html
+++ b/imafru.html
@@ -34,10 +34,10 @@
 	</form>
 </div>
 <div class="weekbar">
-	<div class="{{lefthue}}" style="width: {{left}}%;">
+	<div class="barelement {{lefthue}}" style="width: {{left}}%;">
 		<span>{{leftvalue}}</span>
 	</div>
-	<div class="{{righthue}}" style="width: {{right}}%;">
+	<div class="barelement {{righthue}}" style="width: {{right}}%;">
 		<span>{{rightvalue}}</span>
 	</div>
 </div>
