--- a/imafru.html
+++ b/imafru.html
@@ -36,7 +36,7 @@
 <template name="week">
 <div class="goal">
 	<form>
-		<input type="number" min=0 value={{currentUser.weeklyGoal}}>
+		<input type="number" min=0 value={{currentUser.week.goal}}>
 		<input type="button" value="goal">
 	</form>
 </div>
