snap svg hello world

--- a/imafru.html
+++ b/imafru.html
@@ -28,6 +28,7 @@
 	<div class="week" style="margin-top: 50px;">
 		{{> week}}
 	</div>
+	<div id="svg"></div>
 	{{else}}
 	<div>Display Help</div>
 	{{/if}}
