--- a/imafru.html
+++ b/imafru.html
@@ -15,10 +15,10 @@
 	{{stats}}
 	<div class="days">
 		{{#each pastDays}}
-		{{> pastDay}}
+		{{> presentDaySVG}}
 		{{/each}}
 		{{#each presentDays}}
-		{{> presentDay}}
+		{{> presentDaySVG}}
 		{{/each}}
 		{{#each futureDays}}
 		{{> futureDay}}
@@ -65,6 +65,12 @@
 		<input class="set" type="button" value="set">
 	</form>
 </div>
+</template>
+
+<template name="presentDaySVG">
+	<div class="day svgcontainer">
+		<svg class="svghook" style="height: 100%"></svg>
+	</div>
 </template>
 
 <template name="presentDay">
