--- a/imafru.html
+++ b/imafru.html
@@ -55,7 +55,7 @@
 
 <template name="pastDay">
 <div class="day {{offday}}">
-	<img class="editlock" src="/img/lock-locked.svg" alt="open day to adjust earnings" />
+	<img class="editlock" src="/img/lock-unlocked.svg" alt="open day to adjust earnings" />
 	<div class="weekday" style="height: {{height "anti"}}px;">{{weekday}}</div>
 	<div class="amount {{display}} {{performance}}" style="height: {{height ""}}px;">{{amount}}</div>
 	<form class="update dontdisplay">
