Working on interface

--- a/imafru.html
+++ b/imafru.html
@@ -71,13 +71,14 @@
 	</div>
 </template>
 
+
 <template name="npresentDay">
-	{{!XXX ARCHETYPE XXX}}
+{{!XXX ARCHETYPE npresent to almost XXX}}
 		<img class="lock" src="/img/unlocked.svg" alt="Edit earnings." />
 		<div class="dayContainer present neutral">
 			<div class="earnings">50</div>
 			<div class="dayName good">Wednesday</div>
-			<div class="present done neutral">30</div>
+			<div class="present done neutral"><span>30</span></div>
 			<div class="separator"></div>
 			<div class="present goal neutral">20</div>
 			<div class="separator good"></div>
@@ -89,9 +90,9 @@
 		<div class="dayContainer present good">
 			<div class="earnings">50</div>
 			<div class="dayName good">Friday</div>
-			<div class="present goal good">40</div>
+			<div class="present goal good"><span>40</span></div>
 			<div class="separator"></div>
-			<div class="present done good">10</div>
+			<div class="present done good"><span>10</span></div>
 			<div class="separator good"></div>
 		</div>
 </template>
@@ -101,8 +102,8 @@
 		<div class="dayContainer present almost">
 			<div class="earnings">50</div>
 			<div class="dayName good">Thursday</div>
-			<div class="present done almost">45</div>
-			<div class="present goal almost">0</div>
+			<div class="present done almost"><span>45</span></div>
+			<div class="present goal almost"><span>5</span></div>
 			<div class="separator good"></div>
 		</div>
 </template>
